[package]
name = "custom-elements"
version = "0.2.1"
authors = ["Greg Johnston <greg.johnston@gmail.com>"]
edition = "2018"
description = "A CustomElement trait to create Rust/WASM Web Components/Custom Elements easily without writing any JavaScript."
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/gbj/custom-elements"
homepage = "https://github.com/gbj/custom-elements"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "ShadowRoot",
  "ShadowRootInit",
  "ShadowRootMode",
  "Window"
]
