[package]
authors = ["Greg Johnston <greg.johnston@gmail.com>"]
categories = ["wasm"]
description = "Example Web Component using vanilla web_sys and custom-elements"
license = "Apache-2.0/MIT"
name = "vanilla-web-component"
readme = "./README.md"
repository = "https://github.com/gbj/custom-elements"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
custom-elements = { path = "../.."}
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "Text"
]